# anomaly-detection-c2beaconing-fl

./: .gitignore  README.md  pyproject.toml
.dvc/: config
configs/: centralized_config.yaml  cv_nn_class_weights.yaml  cv_rf_balanced.yaml  cv_ugr16_nn_class_weights.yaml  cv_ugr16_rf_balanced.yaml  cv_ugr16_xgboost_balanced.yaml  cv_xgboost_balanced.yaml  exp_nn_class_weights.yaml  exp_rf_balanced.yaml  exp_xgboost_balanced.yaml  federated_autoencoder.yaml  federated_config.yaml  federated_ctu13_autoencoder.yaml  quick_test_config.yaml
data/processed/: ctu13_advanced_metadata.json  ctu13_advanced_test.parquet  ctu13_advanced_train.parquet  ctu13_advanced_val.parquet  ctu13_metadata.json  ctu13_test.parquet  ctu13_train.parquet  ctu13_val.parquet  ugr16_advanced_metadata.json  ugr16_advanced_test.parquet  ugr16_advanced_train.parquet  ugr16_advanced_val.parquet  ugr16_metadata.json  ugr16_sample.parquet  ugr16_test.parquet  ugr16_train.parquet  ugr16_val.parquet
data/raw/: ctu13_sample.parquet  ctu13_small_sample.parquet  ugr16_sample.parquet
docs/: CTU13_DATASET_EDA.tex  UGR16_DATASET_EDA.tex  template.tex
docs/tables/: label_summary_top20.tex  scenario_counts.tex  scenario_label_mix.tex
notebooks/: eda_ctu13.ipynb  eda_ugr16.ipynb
src/evaluation/: __init__.py  metrics.py
src/federated/: __init__.py  client.py  data_loader.py  server.py  strategy.py
src/models/: __init__.py  autoencoder.py  base.py  neural_network.py  random_forest.py  xgboost_model.py
src/preprocessing/: README.md  __init__.py  base.py  ctu13_preprocessor.py  feature_engineering.py  (+1 more)
(+19 files in other folders)
