[project]
name = "anomaly-detection-c2beaconing-fl"
version = "0.1.0"
description = "Anomaly Detection in C2 Beaconing Traffic Using Privacy Preserving Federated Learning"
readme = "README.md"
requires-python = ">=3.10 < 3.13"
dependencies = [
    "duckdb>=1.4.1",
    "fastparquet>=2024.11.0",
    "flwr[simulation]>=1.22.0",
    "flwr-datasets>=0.5.0",
    "imbalanced-learn>=0.14.0",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.0",
    "mlflow>=3.5.1",
    "pandas>=2.3.3",
    "python-dotenv>=1.2.1",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "tensorboard>=2.20.0",
    "torch>=2.9.0",
    "torchvision>=0.24.0",
    "tqdm>=4.67.1",
    "xgboost>=3.1.1",
    "ydata-profiling>=4.17.0",
    "ray>=2.31.0",
]
